# dantico

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
dantico/: __init__.py  factory.py  fields.py  getters.py  mixins.py  model_schema.py  model_validators.py  schema_registry.py  utils.py
docs/: excluding_including.md  field_validator.md  index.md  introspect.md  optional_fields.md  schema_customization.md
excluding_including/: index.html
field_validator/: index.html
introspect/: index.html
optional_fields/: index.html
pydantic_django/: __init__.py  factory.py  fields.py  model_schema.py  model_validators.py  utils.py
schema_customization/: index.html
scripts/: format-imports.sh  format.sh  lint.sh  test.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/assets/javascripts/: bundle.8492ddcf.min.js
site/assets/stylesheets/: main.20d9efc8.min.css  main.20d9efc8.min.css.map
site/excluding_including/: index.html
site/field_validator/: index.html
site/introspect/: index.html
site/optional_fields/: index.html
site/schema_customization/: index.html
site/search/: search_index.json
tests/: conf.py  conftest.py  models.py  test_custom_fields.py  test_fields.py  test_model_schema.py  test_schema.py  urls.py
